Modified base.styl: Removed body.noscroll and fixed #page overflow.

--- a/generators/app/templates/styl/base.styl
+++ b/generators/app/templates/styl/base.styl
@@ -10,17 +10,9 @@ html
   @media screen and (max-width: 480px)
     font-size 12px
 
-body.noscroll
-  overflow hidden
-
-  &::after
-    content ' '
-    opacity 1
-    z-index 9
-
 #page
   margin 0
-  overflow-x hidden
+  overflow hidden
   padding 0
 
 @import 'partials/navbar'
